--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
   <!--Javascript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-  <!--Latest compiled javascript-->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
   <!--Hvordan fungerer denne med standard bootstrap?-->
   <!-- Latest compiled and minified JavaScript -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
@@ -117,5 +114,10 @@
       </article>
     </div>
   </main>
+
+  <!--Laster inn sidenavigasjon-->
+  <script>
+    $.get('/main/js/navigasjon.js')
+  </script>
 
 </body>
