--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <!--Navigasjonen på toppen JASNY gjør at det ikke er mulig å feste denne-->
   <nav>
     <div class="navbar">
-    <p class="navbar-header navbar-brand">Prosjektnavn</p>
-    <form id="søk_nav" class="navbar-form" role="search">
+      <p class="navbar-header navbar-brand">Prosjektnavn</p>
+      <form id="søk_nav" class="navbar-form" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Søk">
         </div>
@@ -48,15 +48,7 @@
         </div>
       </form>
       <div id="nav_innhold">
-      <a class="navmenu-brand" href="#">Del 1</a>
-      <ul class="navmenu-nav">
-        <li><a href="#">Item 1</a></li>
-        <li><a href="#">Item 2</a></li>
-        <li><a href="#">Item 3</a></li>
-      </ul>
-
-      <a class="navmenu-brand" href="#">Del 2</a>
-    </div>
+      </div>
     </div>
   </nav>
 
@@ -67,18 +59,18 @@
       <p>Google Chrome, Firefox, and Internet Explorer are the most used browsers today.</p>
 
       <article>
-        <h1>Google Chrome</h1>
+        <h2>Google Chrome</h2>
         <p>Google Chrome is a free, open-source web browser developed by Google,
           released in 2008.</p>
       </article>
 
       <article>
-        <h1>Internet Explorer</h1>
+        <h2>Internet Explorer</h2>
         <p>Internet Explorer is a free web browser from Microsoft, released in 1995.</p>
       </article>
 
       <article>
-        <h1>Mozilla Firefox</h1>
+        <h2>Mozilla Firefox</h2>
         <p>Firefox is a free, open-source web browser from Mozilla, released in 2004.</p>
       </article>
 
@@ -92,32 +84,90 @@
       <p>Google Chrome, Firefox, and Internet Explorer are the most used browsers today.</p>
 
       <article>
-        <h1>Google Chrome</h1>
+        <h2>Google Chrome</h2>
         <p>Google Chrome is a free, open-source web browser developed by Google,
           released in 2008.</p>
       </article>
 
       <article>
-        <h1>Internet Explorer</h1>
+        <h2>Internet Explorer</h2>
         <p>Internet Explorer is a free web browser from Microsoft, released in 1995.</p>
       </article>
 
       <article>
-        <h1>Mozilla Firefox</h1>
+        <h2>Mozilla Firefox</h2>
+        <p>Firefox is a free, open-source web browser from Mozilla, released in 2004.</p>
+      </article>
+
+      <h1>Web Browsers</h1>
+      <p>Google Chrome, Firefox, and Internet Explorer are the most used browsers today.</p>
+
+      <article>
+        <h2>Google Chrome</h2>
+        <p>Google Chrome is a free, open-source web browser developed by Google,
+          released in 2008.</p>
+      </article>
+
+      <article>
+        <h2>Internet Explorer</h2>
+        <p>Internet Explorer is a free web browser from Microsoft, released in 1995.</p>
+      </article>
+
+      <article>
+        <h2>Mozilla Firefox</h2>
         <p>Firefox is a free, open-source web browser from Mozilla, released in 2004.</p>
       </article>
 
       <article>
-        <h1>Dette er den nye siden</h1>
-        <h2>Jeg er en underoverskrift</h2>
+        <h1>Dette er den nederste delen</h1>
+        <h2>Jeg er en underoverskrift til den nederste delen</h2>
         <p>Her er noe tekst under overskriften, bare fyll på siden egentlig</p>
       </article>
     </div>
+
+    <h1>Web Browsers</h1>
+    <p>Google Chrome, Firefox, and Internet Explorer are the most used browsers today.</p>
+
+    <article>
+      <h2>Google Chrome</h2>
+      <p>Google Chrome is a free, open-source web browser developed by Google,
+        released in 2008.</p>
+    </article>
+
+    <article>
+      <h2>Internet Explorer</h2>
+      <p>Internet Explorer is a free web browser from Microsoft, released in 1995.</p>
+    </article>
+
+    <article>
+      <h2>Mozilla Firefox</h2>
+      <p>Firefox is a free, open-source web browser from Mozilla, released in 2004.</p>
+    </article>
+
+    <h1>Web Browsers</h1>
+    <p>Google Chrome, Firefox, and Internet Explorer are the most used browsers today.</p>
+
+    <article>
+      <h2>Google Chrome</h2>
+      <p>Google Chrome is a free, open-source web browser developed by Google,
+        released in 2008.</p>
+    </article>
+
+    <article>
+      <h2>Internet Explorer</h2>
+      <p>Internet Explorer is a free web browser from Microsoft, released in 1995.</p>
+    </article>
+
+    <article>
+      <h2>Mozilla Firefox</h2>
+      <p>Firefox is a free, open-source web browser from Mozilla, released in 2004.</p>
+    </article>
   </main>
 
   <!--Laster inn sidenavigasjon-->
   <script>
     $.get('/main/js/navigasjon.js')
+    $.get('/main/js/nav_event.js')
   </script>
 
 </body>
