--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <nav>
     <div class="navbar">
       <p class="navbar-header navbar-brand">Prosjektnavn</p>
-      <form id="søk_nav" class="navbar-form" role="search">
+      <form id="søk_innhold" class="navbar-form" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Søk">
         </div>
