--- a/main/test.html
+++ b/main/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
@@ -10,61 +11,29 @@
 </head>
 
 <body style="height:1500px">
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
-
-  <!--Navigasjonen til venstre-->
-  <nav role="navigation">
-      <div class="navmenu navmenu-fixed-left offcanvas-sm navmenu-inverse">
-        <form id="søk_nav" class="navmenu-form" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Søk i overskrifter">
-          </div>
-        </form>
-        <a class="navmenu-brand visible-md visible-lg" href="#">Del 1</a>
-        <ul class="navmenu-nav">
-          <li><a href="#">Item 1</a></li>
-          <li><a href="#">Item 2</a></li>
-          <li><a href="#">Item 3</a></li>
-        </ul>
-  
-        <a class="navmenu-brand visible-md visible-lg" href="#">Del 2</a>
-      </div>
-    </nav>
-  
-<div class="container" style="margin-top:50px">
-  <h3>Fixed Navbar</h3>
-  <div class="row">
-    <div class="col-md-4">
-      <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p>
-      <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p>    
-    </div>
-    <div class="col-md-4"> 
-      <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p>
-      <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p>
-    </div>
-    <div class="col-md-4"> 
-      <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p>
-      <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p> 
-    </div>
+  <!-- Se på muligheten for å bruke en søkeboks-->
+  <div class="ui search">
+    <input class="prompt" type="text" placeholder="Search GitHub...">
+    <div class="results"></div>
   </div>
 
-  <h1>Scroll this page to see the effect</h1>
-</div>
+  <script>
 
-
+    $('.ui.search')
+      .search({
+        apiSettings: {
+          url: '//api.github.com/search/repositories?q={query}'
+        },
+        fields: {
+          results: 'items',
+          title: 'name',
+          url: 'html_url'
+        },
+        minCharacters: 3
+      })
+      ;
+  </script>
 
 </body>
+
 </html>
