--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous">
 
 
-  <!-- Latest compiled and minified CSS -->
+  <!-- Latest compiled and minified CSS Jasny må komme etter bootstrap-->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
 
   <link rel="stylesheet" href="/main/css/style.css">
@@ -19,7 +19,6 @@
   <!--Javascript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-  <!--Hvordan fungerer denne med standard bootstrap?-->
   <!-- Latest compiled and minified JavaScript -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
 
@@ -168,6 +167,7 @@
   <script>
     $.get('/main/js/navigasjon.js')
     $.get('/main/js/nav_event.js')
+    $.get('/main/js/nav_local.js')
   </script>
 
 </body>
