Prøver å legge til global søkefunksjon

--- a/main/html/left_nav.html
+++ b/main/html/left_nav.html
@@ -3,7 +3,7 @@
 
     <form id="søk_nav" class="navmenu-form" role="search">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Søk i overskrifter">
+        <input type="text" class="form-control" placeholder="Søk i overskrifter" aria-label="Søk i overskrifter">
       </div>
     </form>
     <div id="nav_innhold">
