--- a/main/html/right_nav.html
+++ b/main/html/right_nav.html
@@ -4,11 +4,14 @@
     <form class="form form-inline" role="search">
 
       <div class="form-group">
-        <input id="search_doc" class="form-control mr-sm-2" type="search" placeholder="Søk i dokumentet" aria-label="Søk">
+        <input id="search_doc" class="form-control mr-sm-2" type="search" placeholder="Søk i dokumentet" aria-label="Søk i dokumentet">
 
         <button id="btn_search_doc" class="btn btn-outline-success">Søk</button>
       </div>
 
+      <!--Feltet som viser søketreffene-->
+      <div id="søke_treff">
+      </div>
     </form>
 
   </div>
