--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <!--Hovedinnholdet-->
   <main id="innhold" role="main">
-    <div class="container-fluid">
+    <div class="container">
       <h1>Web Browsers</h1>
       <p>Google Chrome, Firefox, and Internet Explorer are the most used browsers today. Nå skal jeg se hvor langt teksten går, særlig med tanke på right padding for navigasjonen til høyre</p>
 
@@ -156,14 +156,23 @@
       <h2>Mozilla Firefox</h2>
       <p>Firefox is a free, open-source web browser from Mozilla, released in 2004.</p>
     </article>
+
+    <ul>
+      <li>Element 1</li>
+      <li>Element 2</li>
+      <li>Element 3</li>
+      <li>Element 4</li>
+      <li>Dette er egentlig bare for å teste hvordan det blir</li>
+    </ul>
   </div>
   </main>
 
   <!--Laster inn sidenavigasjon-->
   <script>
-    $.get('/main/js/navigasjon.js')
-    $.get('/main/js/nav_event.js')
-    $.get('/main/js/nav_local.js')
+    $.get('/main/js/navigasjon.js');
+    $.get('/main/js/nav_event.js');
+    $.get('/main/js/nav_local.js');
+    $.get('main/js/search_page.js');
   </script>
 
 </body>
