La til søkefunksjon i høyre nav

--- a/main/html/right_nav.html
+++ b/main/html/right_nav.html
@@ -1,18 +1,18 @@
 <nav role="navigation" class="visible-md visible-lg">
   <div class="navmenu navmenu-fixed-right offcanvas-sm">
 
-    <form class="form form-inline" role="search">
+    <form class="navmenu-form" role="search">
 
       <div class="form-group">
-        <input id="search_doc" class="form-control mr-sm-2" type="search" placeholder="Søk i dokumentet" aria-label="Søk i dokumentet">
+        <input id="search_doc" class="form-control" type="search" placeholder="Søk i dokumentet" aria-label="Søk i dokumentet">
 
-        <button id="btn_search_doc" class="btn btn-outline-success">Søk</button>
       </div>
 
-      <!--Feltet som viser søketreffene-->
-      <div id="søke_treff">
-      </div>
     </form>
+
+    <!--Feltet som viser søketreffene-->
+    <div id="søke_treff">
+    </div>
 
   </div>
 </nav>
