--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
   <!--Laster inn sidenavigasjon-->
   <script>
+    $.get('main/js/pseudo_exp.js');
     $.get('/main/js/navigasjon.js');
     $.get('/main/js/nav_event.js');
-    $.get('/main/js/nav_local.js');
     $.get('main/js/search_page.js');
   </script>
 
