--- a/main/html/left_nav.html
+++ b/main/html/left_nav.html
@@ -1,11 +1,14 @@
 <nav role="navigation" class="visible-md visible-lg">
   <div class="navmenu navmenu-fixed-left offcanvas-sm">
 
-    <form id="søk_nav" class="navmenu-form" role="search">
+    <form class="navmenu-form" role="search">
+
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Søk i overskrifter" aria-label="Søk i overskrifter">
+        <input id="søk_nav" type="search" class="form-control" placeholder="Søk i overskrifter" aria-label="Søk i overskrifter">
       </div>
+
     </form>
+
     <div id="nav_innhold">
     </div>
 
