La til scrolling på søkemenyen

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
     $.get('main/js/pseudo_exp.js');
     $.get('/main/js/navigasjon.js');
     $.get('/main/js/nav_event.js');
+    $.get('main/js/highlight.js')
     $.get('main/js/search_page.js');
   </script>
 
