--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Latest compiled and minified CSS Jasny må komme etter bootstrap-->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
 
-  <link rel="stylesheet" href="/main/css/style.css">
+  <link rel="stylesheet" href="/main/css/navbar.css">
 
   <!--Javascript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
