La til padding for main

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
 
   <link rel="stylesheet" href="/main/css/navbar.css">
+  <link rel="stylesheet" href="/main/css/body.css">
 
   <!--Javascript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
