Prøver å legge til collapsible av søkefeltet til høyre

--- a/main/html/navbar/right_nav.html
+++ b/main/html/navbar/right_nav.html
@@ -1,4 +1,4 @@
-<nav role="navigation" class="visible-md visible-lg">
+<nav role="navigation" class="visible-md visible-lg offcanvas-md">
   <div class="navmenu navmenu-fixed-right offcanvas-sm">
 
     <form class="navmenu-form" role="search">
