--- a/main/html/navbar/top_navbar.html
+++ b/main/html/navbar/top_navbar.html
@@ -1,5 +1,14 @@
-<nav class="navbar" role="navigation">
-    <div class="navbar-brand">
-      <p class="navbar-header">Prosjektnavn</p>
-    </div>
-  </nav>
+<nav class="navbar navbar-fixed-top" role="navigation">
+  <div class="navbar-brand">
+    <p class="navbar-header">Prosjektnavn</p>
+  </div>
+</nav>
+
+
+<!--Denne virker ikke???-->
+<!--
+  <ul class="nav navbar-nav">
+    <li class="form navmenu-form">
+    <button id="søk_dokument" class="btn btn-outline-success">Søk</button>
+  </li>
+  </ul>-->
